shopping cart hamburger collapse fix update

--- a/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
+++ b/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
@@ -36,7 +36,7 @@ p{
 }
   #shopping-cart-head-link{
     padding: 0px, 5px, 0px, 5px;
-    margin-left:10px;
+    margin-left:5px;
     float:right;
     margin-top: 5px;
     a{
